minior spacing fixes

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -68,7 +68,7 @@
   width: 50px;
   height: 60px;
   position: absolute;
-  left: 75px;
+  left: 60px;
   color: white;
   font-size: 20px;
   word-wrap: break-spaces;
